# fastapi-poetry

./: blog_app.db  pyproject.toml
blog/: auth.py  blog_app.db  crud.py  database.py  main.py  models.py  schemas.py
