[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Evgeniy Polyakov <evgenickus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
